fix(models): prevent model list from disappearing due to live-view mutation and race conditions
- Change getAvailableModels/Modes/ConfigOptions from Collections.unmodifiableList
  (live view) to List.copyOf (defensive snapshot) so callers are not affected
  when stop() clears the internal lists
- Snapshot availableModels and availableConfigOptions in listSessionOptions()
  to prevent ConcurrentModificationException during concurrent stop()
- Fix race condition in restartWithNewAgent where stop() ran concurrently
  with loadModelsAsync — now stop() completes before triggering model reload
- Retry in fetchModelsWithRetry when agent returns empty model list instead
  of accepting it as final (handles slow agent initialization)